[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/scripts/handoids/Hand.gd" type="Script" id=1]
[ext_resource path="res://assets/actors/Handoids/Crack2.png" type="Texture" id=2]
[ext_resource path="res://assets/actors/Handoids/Hand.png" type="Texture" id=3]
[ext_resource path="res://assets/actors/Handoids/Crack.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.364, 18.69 )

[node name="Hand" type="Area2D"]
position = Vector2( 0.505, -0.257 )
collision_layer = 7
collision_mask = 2147483655
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hand" type="Sprite" parent="."]
position = Vector2( -0.646086, -0.29641 )
texture = ExtResource( 3 )

[node name="Crack2" type="Sprite" parent="."]
visible = false
position = Vector2( 2.01514, 0.975731 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Crack" type="Sprite" parent="."]
visible = false
position = Vector2( 1.91593, 2.95998 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
